Fixed: Bottom space should not be visible when empty, bad toolbar margins with toolbarLocation=bottom.

--- a/skins/moono/editor_ie7.css
+++ b/skins/moono/editor_ie7.css
@@ -13,6 +13,14 @@ This file contains styles to used by Internet Explorer 7 only.
 /* Base it on editor_ie.css, overriding it with styles defined in this file. */
 @import url("editor_ie.css");
 
+/*	Without the following code IE7 will display these containers large
+	even when no content is inside (for example: no elementspath, no resizer). */
+.cke_top,
+.cke_bottom
+{
+	font-size: 0px;
+}
+
 .cke_rtl .cke_toolgroup,
 .cke_rtl .cke_toolbar_separator,
 .cke_rtl .cke_button,
@@ -89,14 +97,20 @@ a.cke_button
 	background-color: #c0c0c0;
 }
 
+.cke_toolbox_collapser {
+	margin-top: 15px;
+}
+
+.cke_toolbox_collapser.cke_toolbox_collapser_min {
+	margin-top: 3px;
+}
+
 .cke_toolbox_collapser .cke_arrow
 {
 	margin-top: 0;
-}
-.cke_toolbox_collapser .cke_arrow
-{
 	border-width:4px;
 }
+
 .cke_toolbox_collapser.cke_toolbox_collapser_min .cke_arrow
 {
 	border-width:3px;
